<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_text_view"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/counter_explanation_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/counter_text_view"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/counter_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:paddingTop="@dimen/padding_button"
            app:layout_constraintTop_toBottomOf="@id/counter_explanation_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="0"/>

    <Button
            android:id="@+id/increase_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_button"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorButton"
            android:layout_marginTop="@dimen/padding_button"
            android:contentDescription="@string/increase_button_content_description"
            app:layout_constraintTop_toBottomOf="@id/counter_text_view"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/decrease_button" android:onClick="increaseCounter"/>

    <Button
            android:id="@+id/decrease_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorButton"
            android:text="@string/decrease_button"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/decrease_button_content_description"
            app:layout_constraintTop_toTopOf="@id/increase_button"
            app:layout_constraintStart_toEndOf="@+id/increase_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="decreaseCounter"/>

    <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_text_view"
            android:text="@string/reset_button"
            android:background="@color/colorAccent"
            android:textColor="@color/colorButton"
            android:contentDescription="@string/reset_button_content_description"
            app:layout_constraintTop_toBottomOf="@id/increase_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="resetCounter"/>
</android.support.constraint.ConstraintLayout>